@@ -1,6 +1,7 @@
 #!/usr/bin/env perl
- ---------------------------------------------------------------------------
-# Copyright (C) 2008 TJ Saunders <tj@castaglia.org>
+
+# ---------------------------------------------------------------------------
+# Copyright (C) 2008-2009 TJ Saunders <tj@castaglia.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,7 +17,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307, USA.
 #
-#  $Id: prxs.in,v 1.2 2008-08-26 02:47:21 castaglia Exp $
+#  $Id: prxs.in,v 1.3 2009-02-16 18:32:11 castaglia Exp $
 # ---------------------------------------------------------------------------
 
 use strict;
